--- a/public/css/page.css
+++ b/public/css/page.css
@@ -126,7 +126,7 @@
 .header_fixed{
     position: fixed;
     top: 0;
-    z-index: 3;
+    z-index: 4;
     background: #333;
     width: 100%;
     height: 100px;
@@ -230,6 +230,15 @@
     text-align: center;
 }
 
+.two .container .more{
+   position: absolute;
+    top: 13em;
+    left: 10em;
+    color: #fff;
+    font-size: 1.3em;
+    z-index:3;
+}
+
 .two .photoGraph{
     overflow: hidden;
     margin: 10px auto;
@@ -244,6 +253,7 @@
     transition: all 0.5s;
     height: 290px;
     width: 270px;
+    z-index: 1;
 }
 
 
@@ -256,10 +266,11 @@
     bottom: 0;
     height: 290px;
     color: #fff;
+    z-index: 2;
     
 }
 
-.photoGraph .more{
+/*.photoGraph .more{
     position: absolute;
     top: 7em;
     left: 6em;
@@ -267,7 +278,7 @@
     font-size: 1.3em;
     background: #7bd0fa;
     border-radius: 20%;
-}
+}*/
 
 .two .box-image__info h4{
     padding-top: 3.7em;
