--- a/public/css/page.css
+++ b/public/css/page.css
@@ -230,7 +230,7 @@
     text-align: center;
 }
 
-.two .container .more{
+.two .photoGraph .more{
    position: absolute;
     top: 13em;
     left: 10em;
